--- a/video/antarang 2k22.html
+++ b/video/antarang 2k22.html
@@ -29,7 +29,260 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <style>
-        body{color:#000;background-color:#fff;user-select:none}h3{font-family:'Montserrat',sans-serif}.home{margin:40px 40px}.container9{border:1px rgb(204,204,204)solid;border-radius:28px;float:left;padding:0px 0px;width:50%}.video{width:100%;height:360px;background:#000;border-radius:28px 28px 0 0}.title{padding:10px 10px;font-size:20px;font-family:'Montserrat',sans-serif}.btn-container{position:relative;top:35px;right:30px;float:right;margin:10px 0;border:1px rgba(148,148,148,0)solid}.ic-btn{display:inline-block;font-size:14px;padding:15px 15px;margin:0 5px;color:rgb(80,80,80);background:#fff;border:1px rgb(204,204,204)solid;border-radius:100px;cursor:pointer;transition:all 0.2s ease}.ic-btn:hover{color:#ffffff;background:rgb(255,17,69);text-shadow:0 0 10px #ffffff46;border:1px #ff446d solid}.description{font-size:10px;padding:0px 10px;font-family:'Montserrat',sans-serif;border:1px rgba(148,148,148,0)solid}.tag{display:inline-block;color:rgb(91,189,255);margin:10PX 3px;font-size:10px}.detail{color:rgb(145,145,145);font-size:10px;font-family:'Montserrat',sans-serif}.container10{border:2px rgba(128,128,128,0)solid;float:right;width:44%;padding:0px 20px}.list-view{height:20vh;margin:20px 0;border:1px rgb(224,224,224)solid;border-radius:28px;transition:all 0.2s ease}.thumbnail{float:left;width:50%;border:1px rgba(204,204,204,0)solid;border-radius:28px 0 0 28px}.un-title{font-size:15px;padding-top:10px}.un-details{float:right;width:48%;border:1px rgba(204,204,204,0)solid;border-radius:28px}.un-btn{position:relative;top:-10px;right:-25px;float:right;color:rgb(102,102,102);background-color:#fff;border:1px rgb(204,204,204)solid;border-radius:100px;font-size:14px;padding:20px 22px;transition:all 0.2s ease}@media screen and(max-width:768px){.home{margin:0px 0px}.container9{border:0px rgb(204,204,204)solid;border-bottom:1px rgb(204,204,204)solid;border-radius:0 0 28px 28px;float:left;width:100%;padding:0px 0px}.video{width:100%;height:100%;background:#000;border-radius:0px 0 0 0}.title{padding:10px 10px;font-size:16px;font-weight:600;color:rgb(24,24,24);font-family:'Montserrat',sans-serif}.btn-container{position:relative;top:35px;right:30px;float:right;margin:10px 0;border:1px rgba(148,148,148,0)solid}.ic-btn{display:inline-block;font-size:14px;padding:15px 15px;margin:0 5px;color:rgb(80,80,80);background:#fff;border:1px rgb(204,204,204)solid;border-radius:100px;transition:all 0.2s ease}.description{font-size:10px;padding:0px 10px;font-family:'Montserrat',sans-serif;border:1px rgba(148,148,148,0)solid}.tag{display:inline-block;color:rgb(91,189,255);margin:10PX 3px;font-size:10px;font-family:'Montserrat',sans-serif}.detail{color:rgb(145,145,145);font-size:10px;font-family:'Montserrat',sans-serif}.container10{border:2px rgba(128,128,128,0)solid;float:right;width:100%;margin:60px 0;padding:0px 10px}.list-view{height:43vh;margin:20px 0;border:1px rgb(224,224,224)solid;border-radius:28px;transition:all 0.2s ease}.thumbnail{float:left;width:100%;border:1px rgba(204,204,204,0.767)solid;border-radius:28px 28px 0 0}.un-title{font-size:small}.un-details{float:right;width:96%;padding-top:5px;border:1px rgba(204,204,204,0)solid;border-radius:28px;font-size:smaller}.un-btn{display:none;position:relative;top:-50px;right:-15px;float:right;color:rgb(102,102,102);background-color:#fff;border:1px rgb(204,204,204)solid;border-radius:100px;font-size:12px;padding:20px 22px;transition:all 0.2s ease}}
+        body {
+    color: #000;
+    background-color: #fff;
+    user-select: none
+}
+
+h3 {
+    font-family: 'Montserrat', sans-serif
+}
+
+.home {
+    margin: 40px 40px
+}
+
+.container9 {
+    border: 1px rgb(204, 204, 204)solid;
+    border-radius: 28px;
+    float: left;
+    padding: 0px 0px;
+    width: 50%
+}
+
+.video {
+    width: 100%;
+    height: 360px;
+    background: #000;
+    border-radius: 28px 28px 0 0
+}
+
+.title {
+    padding: 10px 10px;
+    font-size: 20px;
+    font-family: 'Montserrat', sans-serif
+}
+
+.btn-container {
+    position: relative;
+    top: 35px;
+    right: 30px;
+    float: right;
+    margin: 10px 0;
+    border: 1px rgba(148, 148, 148, 0)solid
+}
+
+.ic-btn {
+    display: inline-block;
+    font-size: 14px;
+    padding: 15px 15px;
+    margin: 0 5px;
+    color: rgb(80, 80, 80);
+    background: #fff;
+    border: 1px rgb(204, 204, 204)solid;
+    border-radius: 100px;
+    cursor: pointer;
+    transition: all 0.2s ease
+}
+
+.ic-btn:hover {
+    color: #ffffff;
+    background: rgb(255, 17, 69);
+    text-shadow: 0 0 10px #ffffff46;
+    border: 1px #ff446d solid
+}
+
+.description {
+    font-size: 10px;
+    padding: 0px 10px;
+    font-family: 'Montserrat', sans-serif;
+    border: 1px rgba(148, 148, 148, 0)solid
+}
+
+.tag {
+    display: inline-block;
+    color: rgb(91, 189, 255);
+    margin: 10PX 3px;
+    font-size: 10px
+}
+
+.detail {
+    color: rgb(145, 145, 145);
+    font-size: 10px;
+    font-family: 'Montserrat', sans-serif
+}
+
+.container10 {
+    border: 2px rgba(128, 128, 128, 0)solid;
+    float: right;
+    width: 44%;
+    padding: 0px 20px
+}
+
+.list-view {
+    height: 20vh;
+    margin: 20px 0;
+    border: 1px rgb(224, 224, 224)solid;
+    border-radius: 28px;
+    transition: all 0.2s ease
+}
+
+.thumbnail {
+    float: left;
+    width: 50%;
+    border: 1px rgba(204, 204, 204, 0)solid;
+    border-radius: 28px 0 0 28px
+}
+
+.un-title {
+    font-size: 15px;
+    padding-top: 10px
+}
+
+.un-details {
+    float: right;
+    width: 48%;
+    border: 1px rgba(204, 204, 204, 0)solid;
+    border-radius: 28px
+}
+
+.un-btn {
+    position: relative;
+    top: -10px;
+    right: -25px;
+    float: right;
+    color: rgb(102, 102, 102);
+    background-color: #fff;
+    border: 1px rgb(204, 204, 204)solid;
+    border-radius: 100px;
+    font-size: 14px;
+    padding: 20px 22px;
+    transition: all 0.2s ease
+}
+
+@media screen and(max-width:768px) {
+    .home {
+        margin: 0px 0px
+    }
+
+    .container9 {
+        border: 0px rgb(204, 204, 204)solid;
+        border-bottom: 1px rgb(204, 204, 204)solid;
+        border-radius: 0 0 28px 28px;
+        float: left;
+        width: 100%;
+        padding: 0px 0px
+    }
+
+    .video {
+        width: 100%;
+        height: 100%;
+        background: #000;
+        border-radius: 0px 0 0 0
+    }
+
+    .title {
+        padding: 10px 10px;
+        font-size: 16px;
+        font-weight: 600;
+        color: rgb(24, 24, 24);
+        font-family: 'Montserrat', sans-serif
+    }
+
+    .btn-container {
+        position: relative;
+        top: 35px;
+        right: 30px;
+        float: right;
+        margin: 10px 0;
+        border: 1px rgba(148, 148, 148, 0)solid
+    }
+
+    .ic-btn {
+        display: inline-block;
+        font-size: 14px;
+        padding: 15px 15px;
+        margin: 0 5px;
+        color: rgb(80, 80, 80);
+        background: #fff;
+        border: 1px rgb(204, 204, 204)solid;
+        border-radius: 100px;
+        transition: all 0.2s ease
+    }
+
+    .description {
+        font-size: 10px;
+        padding: 0px 10px;
+        font-family: 'Montserrat', sans-serif;
+        border: 1px rgba(148, 148, 148, 0)solid
+    }
+
+    .tag {
+        display: inline-block;
+        color: rgb(91, 189, 255);
+        margin: 10PX 3px;
+        font-size: 10px;
+        font-family: 'Montserrat', sans-serif
+    }
+
+    .detail {
+        color: rgb(145, 145, 145);
+        font-size: 10px;
+        font-family: 'Montserrat', sans-serif
+    }
+
+    .container10 {
+        border: 2px rgba(128, 128, 128, 0)solid;
+        float: right;
+        width: 100%;
+        margin: 60px 0;
+        padding: 0px 10px
+    }
+
+    .list-view {
+        height: 43vh;
+        margin: 20px 0;
+        border: 1px rgb(224, 224, 224)solid;
+        border-radius: 28px;
+        transition: all 0.2s ease
+    }
+
+    .thumbnail {
+        float: left;
+        width: 100%;
+        border: 1px rgba(204, 204, 204, 0.767)solid;
+        border-radius: 28px 28px 0 0
+    }
+
+    .un-title {
+        font-size: small
+    }
+
+    .un-details {
+        float: right;
+        width: 96%;
+        padding-top: 5px;
+        border: 1px rgba(204, 204, 204, 0)solid;
+        border-radius: 28px;
+        font-size: smaller
+    }
+
+    .un-btn {
+        display: none;
+        position: relative;
+        top: -50px;
+        right: -15px;
+        float: right;
+        color: rgb(102, 102, 102);
+        background-color: #fff;
+        border: 1px rgb(204, 204, 204)solid;
+        border-radius: 100px;
+        font-size: 12px;
+        padding: 20px 22px;
+        transition: all 0.2s ease
+    }
+}
     </style>
 </head>
 
